# AdventOfCode

./: .gitignore
2022/1/: main.cpp
2022/10/: day10.cpp
2022/11/: day11.cpp
2022/12/: day12.cpp
2022/5/: day5.cpp
2022/6/: day6.cpp
2022/9/: day9.cpp
2024/: CMakeLists.txt  main.cpp
2024/common/competitivelib/: binary_operations.hpp  competitive.hpp  constants.hpp  graph.hpp  print.hpp  sort.hpp  template.cc  templates.hpp  util.hpp  utilityAritmetic.hpp
2024/days/: day_01.cpp  day_03.cpp  day_04.cpp  day_05.cpp  days.h
